--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -13,4 +13,12 @@
     .card {
         @apply h-card bg-white p-2 col-span-3 rounded-md border border-gray-200
     }
+
+    .td {
+        @apply text-center text-sm py-2 px-1
+    }
+
+    .th {
+        @apply bg-gray-300 font-medium py-2 px-1 text-white
+    }
 }
